<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Citas">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/icono_agenda"
                    android:title="@string/title_section1" />
                <item
                    android:icon="@drawable/icono_nueva_cita"
                    android:title="@string/title_section2" />
            </group>
        </menu>
    </item>

    <item android:title="Mascotas">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/icono_mascotas"
                    android:title="@string/title_section3" />
                <item
                    android:icon="@drawable/icono_nueva_mascota"
                    android:title="@string/title_section4" />
            </group>
        </menu>
    </item>

    <item android:title="Otros">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/icono_about"
                    android:title="@string/title_section5" />
            </group>
        </menu>
    </item>

</menu>
